<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#FEC8D8"
	tools:context=".segundo_nivel_ef">

	<androidx.appcompat.widget.Toolbar
		android:id="@+id/topBar"
		android:layout_width="0dp"
		android:layout_height="60dp"
		android:background="@color/purple_200"
		android:minHeight="?attr/actionBarSize"
		android:theme="?attr/actionBarTheme"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.0" />

	<TextView
		android:id="@+id/titleTxt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/encuentra_la_figura"
		android:textColor="#FFFFFF"
		android:textSize="24sp"
		app:layout_constraintBottom_toBottomOf="@+id/topBar"
		app:layout_constraintEnd_toEndOf="@+id/topBar"
		app:layout_constraintStart_toStartOf="@+id/topBar"
		app:layout_constraintTop_toTopOf="@+id/topBar" />

	<ImageButton
		android:id="@+id/botonRegresar2"
		android:layout_width="60dp"
		android:layout_height="60dp"
		android:background="#00FFFFFF"
		android:contentDescription="@string/descripcion_flecha_regresar"
		android:onClick="openMenuPrincipal"
		app:layout_constraintBottom_toBottomOf="@+id/topBar"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="@+id/topBar"
		app:layout_constraintTop_toTopOf="@+id/topBar"
		app:layout_constraintVertical_bias="0.0"
		app:srcCompat="?attr/homeAsUpIndicator"
		tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

	<TextView
		android:id="@+id/intruccionesTxt"
		android:layout_width="250dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="10dp"
		android:layout_marginTop="30dp"
		android:letterSpacing="0.055"
		android:text="@string/encuentra_la_figura_del"
		android:textSize="20sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/topBar" />

	<TextView
		android:id="@+id/intruccionesTxt2"
		android:layout_width="250dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="10dp"
		android:text="@string/marco"
		android:textSize="20sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/intruccionesTxt"
		app:layout_constraintVertical_bias="0.0" />

	<ImageView
		android:id="@+id/marcoImg"
		android:layout_width="150dp"
		android:layout_height="120dp"
		android:contentDescription="@string/marco_description"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/topBar"
		app:layout_constraintVertical_bias="0.0"
		app:srcCompat="@drawable/marco" />

	<ImageView
		android:id="@+id/correctoImg2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:contentDescription="@string/imagen_correcta"
		app:layout_constraintBottom_toBottomOf="@+id/marcoImg"
		app:layout_constraintEnd_toEndOf="@+id/marcoImg"
		app:layout_constraintHorizontal_bias="0.48"
		app:layout_constraintStart_toStartOf="@+id/marcoImg"
		app:layout_constraintTop_toTopOf="@+id/marcoImg"
		app:layout_constraintVertical_bias="0.35"
		app:srcCompat="@drawable/cuadrado_verde_min" />

	<ImageButton
		android:id="@+id/botonFiguraCorrecta2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="#00FFFFFF"
		android:contentDescription="@string/boton_silueta_correcta"
		android:onClick="SiluetaCorrecta"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/imageView9"
		app:layout_constraintHorizontal_bias="0.728"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/imageView8"
		app:layout_constraintVertical_bias="0.0"
		app:srcCompat="@drawable/cuadrado_verde_min" />

	<ImageView
		android:id="@+id/imageView11"
		android:layout_width="134dp"
		android:layout_height="132dp"
		android:contentDescription="@string/imagen_incorrecta"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/imageView7"
		app:layout_constraintHorizontal_bias="0.521"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/intruccionesTxt2"
		app:layout_constraintVertical_bias="0.0"
		app:srcCompat="@drawable/cuadrado_negro" />

	<ImageView
		android:id="@+id/imageView7"
		android:layout_width="126dp"
		android:layout_height="120dp"
		android:contentDescription="@string/imagen_incorrecta"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.873"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/marcoImg"
		app:layout_constraintVertical_bias="0.051"
		app:srcCompat="@drawable/circulo_azul" />

	<ImageView
		android:id="@+id/imageView8"
		android:layout_width="118dp"
		android:layout_height="128dp"
		android:contentDescription="@string/imagen_incorrecta"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/imageView9"
		app:layout_constraintHorizontal_bias="0.306"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/imageView11"
		app:layout_constraintVertical_bias="0.0"
		app:srcCompat="@drawable/circulo_morado" />

	<ImageView
		android:id="@+id/imageView9"
		android:layout_width="130dp"
		android:layout_height="122dp"
		android:contentDescription="@string/imagen_incorrecta"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.4"
		app:layout_constraintStart_toEndOf="@+id/imageView11"
		app:layout_constraintTop_toBottomOf="@+id/imageView7"
		app:layout_constraintVertical_bias="0.066"
		app:srcCompat="@drawable/cuadrado_naranja" />

	<ImageView
		android:id="@+id/imageView10"
		android:layout_width="127dp"
		android:layout_height="122dp"
		android:contentDescription="@string/imagen_incorrecta"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/imageView12"
		app:layout_constraintHorizontal_bias="0.343"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/botonFiguraCorrecta2"
		app:layout_constraintVertical_bias="0.0"
		app:srcCompat="@drawable/circulo_naranja" />

	<ImageView
		android:id="@+id/imageView12"
		android:layout_width="141dp"
		android:layout_height="116dp"
		android:contentDescription="@string/imagen_incorrecta"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.315"
		app:layout_constraintStart_toEndOf="@+id/botonFiguraCorrecta2"
		app:layout_constraintTop_toBottomOf="@+id/imageView9"
		app:layout_constraintVertical_bias="0.19"
		app:srcCompat="@drawable/circulo_rojo" />

</androidx.constraintlayout.widget.ConstraintLayout>
